k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-n-morty-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rick-n-morty.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rick-n-morty-svc
            port:
              number: 80
